<resources>
    <string name="app_name">FoodApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="moto">Food</string>
    <string name="username_textview">Username:</string>
    <string name="password_textview">Password:</string>
    <string name="register">Register</string>
    <string name="input_name">Name</string>
    <string name="input_username">Input username here</string>
    <string name="input_password">Input password here</string>
    <string name="input_age">Input age</string>
    <string name="name_textview">Name: </string>
    <string name="gender_textview">Gender :</string>
    <string name="textGender"> gender </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age_textview">Age</string>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="logout">Logout</string>
    <string name="mail">Email:</string>
    <string name="input_email">Input email here</string>
    <string name="no_connection">No Wifi connection. Connect to Wifi to avoid mobile charges</string>
    <string name="address">Address</string>
    <string name="instructions">Instructions:</string>
    <string name="create_and_add_to_cookbook">Create and add to my Cookbook</string>
    <string name="add_to_cookbook">Add to my Cookbook</string>
    <string name="recent_meals">Recent Meals</string>
    <string name="my_cook_book">My Cookbook</string>
    <string name="friends">Followed</string>
    <string name="liked">Liked</string>
    <string name="forum">Forum</string>
    <string name="opening_your_cookbook">Opening your cookbook</string>
    <string name="delete">Delete</string>
    <string name="personalize">Personalize</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="create_recipe_name_label">Recipe Name:</string>
    <string name="create_recipe_name">Name of the recipe</string>
    <string name="create_recipe_ingredients_label">Ingredients:</string>
    <string name="create_recipe_ingredients">Input the ingredients here</string>
    <string name="create_recipe_instructions_label">Instructions:</string>
    <string name="create_recipe_instructions">Input the instructions here</string>
    <string name="btnTakePicture">Capture Image</string>
        
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="keep_image">Keep Image</string>
    <string name="follow">Follow</string>
    <string name="followed_chiefs">Followed Chiefs</string>
    <string name="chiefs">Chiefs</string>
    <string name="unfollow">Unfollow</string>
    <string name="unfollow_question">Do you want to unfollow this user?</string>
    <string name="ingredients">Ingredients:</string>
    <string name="loading_recipes">Loading Recipes...</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">category name</string>
    <string name="all_categories">All Categories</string>
    <string name="ingredient">Ingredient</string>
    <string name="add">Add</string>
    <string name="question_title">Title</string>
    <string name="quetion_title_name">Title</string>
    <string name="text_label">Question</string>
    <string name="basic">Basic Question</string>
    <string name="post">Post</string>
    <string name="post_as_anonymous">Post as anonymous</string>
    <string name="no">No</string>
    <string name="Likes">Likes</string>
    <string name="advanced">Advanced</string>
    <string name="choose_level">Choose Level</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="pieces">pieces</string>
    <string name="cups">cups</string>
    <string name="edit">Edit</string>
    <string name="edit_question">Do you want to edit?</string>
    <string name="close">close</string>

</resources>
