<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="7dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/btnCapturePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:src="@drawable/photo_camera_128"
                android:text="@string/btnTakePicture" />


            <ImageButton
                android:id="@+id/recipe_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewMoto"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/image_archive_128" />

            <TextView
                android:id="@+id/add_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/recipe_image_button"
                android:layout_marginTop="10dp"
                android:text="@string/add_category" />

            <EditText
                android:id="@+id/category_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recipe_image_button"
                android:layout_toEndOf="@id/add_category"
                android:layout_toRightOf="@id/add_category"
                android:ems="10"
                android:hint="@string/category_name" />

            <Button
                android:id="@+id/btn_all_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/category_name"
                android:layout_toEndOf="@id/add_category"
                android:layout_toRightOf="@id/add_category"
                android:text="@string/all_categories"
                android:textColor="#333"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/create_recipe_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_all_categories"
                android:layout_marginTop="10dp"
                android:text="@string/create_recipe_name_label" />

            <EditText
                android:id="@+id/create_recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_all_categories"
                android:layout_toEndOf="@+id/create_recipe_name_label"
                android:layout_toRightOf="@+id/create_recipe_name_label"
                android:ems="10"
                android:hint="@string/create_recipe_name" />

            <TextView
                android:id="@+id/create_recipe_ingredients_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/create_recipe_name"
                android:text="@string/create_recipe_ingredients_label" />

            <ListView
                android:id="@+id/ingredientsListViewEditable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/create_recipe_name"
                android:layout_toEndOf="@id/create_recipe_ingredients_label"
                android:layout_toRightOf="@id/create_recipe_ingredients_label"
                android:background="#dadad6"/>

            <Button
                android:id="@+id/add_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ingredientsListViewEditable"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/add_ingredients"
                android:textColor="#333"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/create_recipe_instructions_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/add_ingredients"
                android:text="@string/create_recipe_instructions_label" />

            <EditText
                android:id="@+id/create_recipe_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_recipe_instructions_label"
                android:layout_toEndOf="@id/create_recipe_instructions_label"
                android:layout_toRightOf="@id/create_recipe_instructions_label"
                android:ems="10"
                android:hint="@string/create_recipe_instructions" />


            <CheckBox
                android:id="@+id/post_recipe_as_anonymous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_create"
                android:checked="false"
                android:text="@string/post_as_anonymous" />

            <Button
                android:id="@+id/btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_recipe_instructions"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/create_and_add_to_cookbook"
                android:textColor="#333"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/primaryColor"
        android:scrollbars="vertical" />

</android.support.v4.widget.DrawerLayout>