<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragmentSingle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

                <ImageView
                    android:id="@+id/btnCapturePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:src="@drawable/photo_camera_128"
                    android:text="@string/btnTakePicture" />


                <ImageButton
                    android:id="@+id/recipe_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewMoto"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/image_archive_128" />

                <TextView
                    android:id="@+id/add_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/recipe_image_button"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_category" />

                <EditText
                    android:id="@+id/category_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recipe_image_button"
                    android:layout_toEndOf="@id/add_category"
                    android:layout_toRightOf="@id/add_category"
                    android:ems="10"
                    android:hint="@string/category_name" />

                <Button
                    android:id="@+id/btn_all_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recipe_image_button"
                    android:layout_toEndOf="@id/category_name"
                    android:layout_toRightOf="@id/category_name"
                    android:text="@string/all_categories"
                    android:textColor="#333"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/create_recipe_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/btn_all_categories"
                    android:layout_marginTop="10dp"
                    android:text="@string/create_recipe_name_label" />

                <EditText
                    android:id="@+id/create_recipe_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_all_categories"
                    android:layout_toEndOf="@+id/create_recipe_name_label"
                    android:layout_toRightOf="@+id/create_recipe_name_label"
                    android:ems="10"
                    android:hint="@string/create_recipe_name" />

                <TextView
                    android:id="@+id/create_recipe_ingredients_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/create_recipe_name"
                    android:text="@string/create_recipe_ingredients_label" />
    </LinearLayout>
