<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

   <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >



    <ImageView
        android:id="@+id/imageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" />
       <TextView
           android:id="@+id/textView01Moto"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:layout_marginTop="8dp"
           android:layout_below="@+id/imageView01"
           android:gravity="center"
           android:text="@string/moto"
           android:textAppearance="?android:attr/textAppearanceLarge"
           android:textStyle="bold" />
    <TextView
        android:id="@+id/textView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView01Moto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/username_textview" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView02"
        android:layout_centerHorizontal="true"
        android:ems="10" />

    <TextView
        android:id="@+id/textView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:layout_centerHorizontal="true"
        android:text="@string/password_textview" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView03"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#333"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true" />

       <LinearLayout
           android:id="@+id/signinFrame"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginBottom="20dp"
           android:layout_below="@+id/btn_login"
           android:gravity="center"
           android:orientation="vertical"
           android:visibility="visible"
           android:layout_centerHorizontal="true" >
           <com.google.android.gms.common.SignInButton
               android:id="@+id/signin"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:textSize="18dp"/>
       </LinearLayout>





   </RelativeLayout>

    </ScrollView>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:text="@string/register"
            android:textColor="#333"
            android:textSize="16sp"
            android:textStyle="bold" >

            <requestFocus />
        </Button>
</RelativeLayout>
	 <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>

